<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nom_lugar"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="verMapa">
            <ImageView
                android:id="@+id/logo_tipo"
                android:layout_width="@dimen/tamano_imagen_pequena"
                android:layout_height="@dimen/tamano_imagen_pequena"
                android:contentDescription="@string/text_tipo_logo"
                android:src="@drawable/otros"/>
            <TextView
                android:id="@+id/tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_tipo_lugar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/tamano_imagen_pequena"
                android:layout_height="@dimen/tamano_imagen_pequena"
                android:src="@android:drawable/ic_menu_myplaces"/>
            <TextView
                android:id="@+id/direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/direccion"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="llamadaTelefono">
            <ImageView
                android:layout_width="@dimen/tamano_imagen_pequena"
                android:layout_height="@dimen/tamano_imagen_pequena"
                android:src="@android:drawable/ic_menu_call"/>
            <TextView
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="pgWeb">
            <ImageView
                android:layout_width="@dimen/tamano_imagen_pequena"
                android:layout_height="@dimen/tamano_imagen_pequena"
                android:src="@android:drawable/ic_menu_mapmode"/>
            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/tamano_imagen_pequena"
                android:layout_height="@dimen/tamano_imagen_pequena"
                android:src="@android:drawable/ic_menu_info_details"/>
            <TextView
                android:id="@+id/comentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comentarios"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/tamano_imagen_pequena"
                android:layout_height="@dimen/tamano_imagen_pequena"
                android:src="@android:drawable/ic_menu_my_calendar"/>
            <TextView
                android:id="@+id/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/text_fecha"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <ImageView
                android:layout_width="@dimen/tamano_imagen_pequena"
                android:layout_height="@dimen/tamano_imagen_pequena"
                android:src="@android:drawable/ic_menu_recent_history"/>
            <TextView
                android:id="@+id/hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/text_hora"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>
        <RatingBar
            android:id="@+id/valoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:rating="3"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/foto_epsg"
                android:adjustViewBounds="true"
                android:contentDescription="@string/text_foto"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">
                <ImageView
                    android:layout_width="@dimen/tamano_imagen_pequena"
                    android:layout_height="@dimen/tamano_imagen_pequena"
                    android:contentDescription="@string/text_logo_camara"
                    android:src="@android:drawable/ic_menu_camera"
                    android:onClick="tomarFoto"/>
                <ImageView
                    android:layout_width="@dimen/tamano_imagen_pequena"
                    android:layout_height="@dimen/tamano_imagen_pequena"
                    android:contentDescription="@string/text_logo_galeria"
                    android:src="@android:drawable/ic_menu_gallery"
                    android:onClick="galeria"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>